# nix-templates

./: README.md  flake.nix
cloudflare-worker/: flake.nix
python/: .envrc  README.md  flake.nix  pyproject.toml  treefmt.toml
python/src/main/: __init__.py  __main__.py
typescript/: .env.example  flake.nix
typescript/src/: main.ts
