[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"main" = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/main"]
